Do analysis of previous datasets

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -117,35 +117,38 @@
    "source": [
     "from frequency_analysis import get_spectrogram_raw\n",
     "\n",
-    "mic_type = 'measurement'\n",
-    "cut_x = range(0, 20)\n",
-    "cut_y = range(1000, 3000)\n",
+    "def plot_spectrograms(df_freq):\n",
+    "    mic_type = 'measurement'\n",
+    "    cut_x = range(0, 20)\n",
+    "    cut_y = range(1000, 3000)\n",
     "\n",
-    "filters = ['mic_type', 'snr', 'source', 'degree', 'distance']\n",
-    "for chosen_tuple, df_source in df_freq.groupby(filters):\n",
-    "    \n",
-    "    fig, axs = plt.subplots(1, 2, squeeze=False)\n",
-    "    fig.set_size_inches(15, 5)\n",
-    "    fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
-    "    \n",
-    "    for j, motors in enumerate([0, \"all43000\"]):\n",
-    "        df_this = df_source[df_source.motors==motors]\n",
-    "        if len(df_this) != 1:\n",
-    "            print(df_this)\n",
-    "            continue\n",
-    "        row = df_this.iloc[0]\n",
-    "        \n",
-    "        spec_all, freqs = get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
-    "        spec = np.mean(spec_all, axis=1) # n_times x n_mics x n_freqs\n",
-    "        \n",
-    "        axs[0, j].pcolorfast(row.seconds, freqs, np.log10(spec[:-1, :-1]))\n",
-    "        axs[0, j].set_title(f'motors {motors}')\n",
+    "    filters = ['mic_type', 'snr', 'source', 'degree', 'distance']\n",
+    "    for chosen_tuple, df_source in df_freq.groupby(filters):\n",
     "\n",
-    "    #spec_cut = spec[:, cut_x]\n",
-    "    #spec_cut = spec_cut[cut_y, :]\n",
-    "    #axs[0, 2].pcolorfast(row.seconds[cut_x], row.frequencies[cut_y], np.log10(spec_cut))\n",
-    "    #plot_square(cut_x, cut_y, ax=axs[0, 1])\n",
-    "    #fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')"
+    "        fig, axs = plt.subplots(1, 2, squeeze=False)\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
+    "\n",
+    "        for j, motors in enumerate([0, \"all43000\"]):\n",
+    "            df_this = df_source[df_source.motors==motors]\n",
+    "            if len(df_this) != 1:\n",
+    "                print(df_this)\n",
+    "                continue\n",
+    "            row = df_this.iloc[0]\n",
+    "\n",
+    "            spec_all, freqs = get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
+    "            spec = np.mean(spec_all, axis=1) # n_times x n_mics x n_freqs\n",
+    "\n",
+    "            axs[0, j].pcolorfast(row.seconds, freqs, np.log10(spec[:-1, :-1]))\n",
+    "            axs[0, j].set_title(f'motors {motors}')\n",
+    "            \n",
+    "        #spec_cut = spec[:, cut_x]\n",
+    "        #spec_cut = spec_cut[cut_y, :]\n",
+    "        #axs[0, 2].pcolorfast(row.seconds[cut_x], row.frequencies[cut_y], np.log10(spec_cut))\n",
+    "        #plot_square(cut_x, cut_y, ax=axs[0, 1])\n",
+    "        #fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')\n",
+    "\n",
+    "#plot_spectrograms(df_freq)"
    ]
   },
   {
@@ -160,10 +163,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from wall_analysis import filter_by_dicts\n",
+    "from wall_detector import WallDetector, normalized_std\n",
     "from frequency_analysis import apply_linear_mask, apply_box_mask\n",
     "from frequency_analysis import psd_df_from_spec, get_index_matrix, extract_psd\n",
     "\n",
@@ -171,80 +177,49 @@
     "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "df_mic_types = filter_by_dicts(df_freq, chosen_dicts)\n",
     "\n",
-    "kwargs_all = {\n",
-    "    'audio_deck': {\n",
-    "        'slope': 4000/170,\n",
-    "        'offset': 400,\n",
-    "        'delta': 20,\n",
-    "        'min_freq': 2000,\n",
-    "        'max_freq': 5000,\n",
-    "        'min_time': 70,\n",
-    "        'max_time': 190, \n",
-    "        'mics': range(4)\n",
-    "    },\n",
-    "    'measurement': {\n",
-    "        'slope': 4000/510,\n",
-    "        'offset': 600,\n",
-    "        'delta': 20,\n",
-    "        'min_freq': 2000,\n",
-    "        'max_freq': 5000,\n",
-    "        'min_time': 190,\n",
-    "        'max_time': 520,\n",
-    "        'mics': [1]\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "fig_all, ax_all = plt.subplots()\n",
+    "fig_bins, ax_bins = plt.subplots()\n",
     "\n",
     "for j, (i_row, row) in enumerate(df_mic_types.iterrows()):\n",
-    "    # get raw spectrogram\n",
-    "    spec_all, freqs = get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
-    "    spec = np.mean(spec_all, axis=1)\n",
+    "    if row.mic_type == 'measurement' and row.snr == 1: # this is no \"real snr\"\n",
+    "        continue\n",
+    "        \n",
+    "    # processing\n",
+    "    wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "    wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "    psd, freqs_psd = wall_detector.get_frequency_slice()\n",
+    "    std_psd, __ = wall_detector.get_frequency_slice(method=normalized_std)\n",
     "    \n",
-    "    kwargs = kwargs_all[row.mic_type]\n",
-    "\n",
+    "    \n",
+    "    # plotting\n",
+    "    label = f'{row.mic_type}, snr={row.snr}'\n",
+    "    spec_masked = np.mean(spec_masked_all, axis=1)\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    ax.pcolorfast(range(spec.shape[1]), freqs, np.log10(spec[:-1, :-1]))\n",
-    "\n",
-    "    # apply mask to spec\n",
-    "    spec_masked_all, freqs = apply_linear_mask(spec_all, freqs, \n",
-    "                                               kwargs['slope'], \n",
-    "                                               kwargs['offset'], \n",
-    "                                               kwargs['delta'], ax=ax)\n",
-    "    spec_masked_all, freqs = apply_box_mask(spec_masked_all, freqs, \n",
-    "                                            min_freq=kwargs['min_freq'], \n",
-    "                                            max_freq=kwargs['max_freq'], \n",
-    "                                            min_time=kwargs['min_time'], \n",
-    "                                            max_time=kwargs['max_time'], \n",
-    "                                            ax=ax)\n",
-    "\n",
-    "    # get frequency slice\n",
-    "    index_matrix = get_index_matrix(spec_masked_all)\n",
-    "    ax.plot(freqs[index_matrix[0, :]], color='white', ls=':')\n",
-    "    \n",
-    "    psd_df = psd_df_from_spec(spec_masked_all, freqs, index_matrix)\n",
-    "    psd, freqs_psd, std_psd = extract_psd(psd_df)\n",
+    "    ax.pcolorfast(row.seconds, freqs, np.log10(spec_masked[:-1, :-1]))\n",
     "\n",
     "    plt.figure()\n",
     "    for i in range(psd.shape[0]):\n",
     "        plt.errorbar(freqs_psd, psd[i, :], std_psd[i, :], label=f'mic{i}')\n",
+    "    plt.title(label)\n",
     "    [plt.axvline(f, color='black', ls=':') for f in freqs_psd]\n",
     "    \n",
-    "    [ax_all.plot([f, f], [j, j+1], color=f'C{j}', ls=':') for f in freqs_psd]\n",
-    "    ax_all.plot([], [], color=f'C{j}', ls=':', label=f'{row.mic_type}, snr={row.snr}')\n",
-    "    \n",
+    "    [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls='-') for f in freqs_psd]\n",
+    "    ax_bins.plot([], [], color=f'C{j+1}', ls='-', label=label)\n",
     "    plt.yscale('log')\n",
     "    plt.legend()\n",
-    "    \n",
+    "\n",
     "from bin_selection import generate_sweep\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "bins, t_sec = generate_sweep('sweep')\n",
-    "freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "[ax_all.plot([f, f], [j+1, j+2], color=f'C{j+1}', ls='-') for f in freqs[bins]]\n",
-    "ax_all.plot([], [], color=f'C{j+1}', ls=':', label='sweep')\n",
-    "ax_all.legend(loc='lower left')\n",
-    "pass\n"
+    "freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "[ax_bins.plot([f, f], [0, j+1], color=f'C0', ls='-') for f in freqs_sweep[bins]]\n",
+    "ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
+    "ax_bins.set_xlabel('frequency [Hz]')\n",
+    "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
+    "ax_bins.set_xlim(2000, 5000)\n",
+    "ax_bins.set_yticks([])\n",
+    "pass"
    ]
   },
   {
@@ -262,59 +237,59 @@
    },
    "outputs": [],
    "source": [
-    "from bin_selection import select_frequencies\n",
-    "from constants import SPEED_OF_SOUND\n",
-    "from crazyflie_description_py.parameters import N_BUFFER\n",
+    "import progressbar\n",
     "    \n",
     "params_freq = load_params(exp_name)\n",
     "    \n",
-    "filters = ['snr', 'motors', 'mic_type', 'distance']\n",
-    "frequency_slice_df = pd.DataFrame(columns=filters+['psd', 'freqs', 'psd_std'])\n",
+    "filters = ['mic_type', 'snr', 'motors']\n",
     "\n",
-    "for chosen_tuple, df_this in df_freq.groupby(filters):\n",
+    "for chosen_tuple, df_mic in df_freq.groupby(filters):\n",
     "    filter_dict = dict(zip(filters, chosen_tuple))\n",
-    "    if filter_dict['motors'] != 0:\n",
-    "        continue\n",
-    "        \n",
-    "    mic_type = filter_dict['mic_type']\n",
-    "    kwargs = kwargs_all[mic_type]\n",
-    "    mic_indices = kwargs_all[mic_type]['mics']\n",
-    "\n",
-    "    fig, axs = plt.subplots(1, len(mic_indices), squeeze=False)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    fig.suptitle(filter_dict)\n",
-    "\n",
-    "    if len(df_this) != 1: \n",
-    "        print(f\"{len(df_this)} findings for {filter_dict}\")\n",
-    "        continue\n",
-    "\n",
-    "    row = df_this.iloc[0]\n",
+    "    print(filter_dict)\n",
     "    \n",
-    "    spec_all, freqs = get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
-    "    spec_masked_all, freqs = apply_linear_mask(spec_all, freqs, \n",
-    "                                               kwargs['slope'], \n",
-    "                                               kwargs['offset'], \n",
-    "                                               kwargs['delta'])#, ax=ax)\n",
-    "    spec_masked_all, freqs = apply_box_mask(spec_masked_all, freqs, \n",
-    "                                            min_freq=kwargs['min_freq'], \n",
-    "                                            max_freq=kwargs['max_freq'],\n",
-    "                                            min_time=kwargs['min_time'], \n",
-    "                                            max_time=kwargs['max_time'],\n",
-    "                                           )#, ax=ax)\n",
-    "    index_matrix = get_index_matrix(spec_masked_all)\n",
-    "    psd_df = psd_df_from_spec(spec_masked_all, freqs, index_matrix)\n",
-    "    psd, freqs_psd, std_psd = extract_psd(psd_df)\n",
+    "    wall_detector = WallDetector(exp_name=exp_name, mic_type=filter_dict['mic_type'])\n",
+    "    \n",
+    "    if filter_dict['mic_type'] == 'measurement' and filter_dict['snr'] == 1:\n",
+    "        continue\n",
+    "    elif filter_dict['motors'] != 0:\n",
+    "        continue\n",
+    "    \n",
+    "    d_idx = 0; \n",
+    "    with progressbar.ProgressBar(max_value=len(df_mic)) as p:\n",
+    "        for distance, df_this in df_mic.groupby('distance'):\n",
     "\n",
-    "    for i, mic_idx in enumerate(mic_indices):\n",
-    "        axs[0, i].errorbar(freqs_psd, psd[i], std_psd[i], \n",
-    "                          label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
-    "        axs[0, i].set_yscale('log')\n",
-    "        axs[0, i].set_title(f'm{mic_idx}')\n",
-    "        \n",
-    "    df_data = filter_dict\n",
-    "    df_data.update({'psd':psd, 'freqs':freqs_psd, 'psd_std':std_psd})\n",
-    "    frequency_slice_df.loc[len(frequency_slice_df), :] = df_data"
+    "            fig, axs = plt.subplots(1, wall_detector.n_mics, squeeze=False)\n",
+    "            fig.set_size_inches(10, 5)\n",
+    "            fig.suptitle(f'distance={distance}cm, {filter_dict}')\n",
+    "\n",
+    "            if len(df_this) != 1: \n",
+    "                print(f\"{len(df_this)} findings for {distance, filter_dict}\")\n",
+    "                continue\n",
+    "\n",
+    "            row = df_this.iloc[0]\n",
+    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "\n",
+    "            wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "            psd, freqs_psd = wall_detector.get_frequency_slice(distance=row.distance)\n",
+    "            std_psd, __ = wall_detector.get_frequency_slice(distance=row.distance, method=normalized_std)\n",
+    "\n",
+    "            for i in range(wall_detector.n_mics):\n",
+    "                mic_idx = wall_detector.mic_indices[i]\n",
+    "                axs[0, i].errorbar(freqs_psd, psd[i], std_psd[i], \n",
+    "                                  label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
+    "                axs[0, i].set_yscale('log')\n",
+    "                axs[0, i].set_title(f'm{mic_idx}')\n",
+    "                \n",
+    "            p.update(d_idx); d_idx += 1\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -897,14 +872,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "from evaluate_data import read_df, integrate_yaw\n",
     "from dynamic_analysis import add_pose_to_df\n",
     "\n",
-    "exp_name = '2020_11_26_wall'; \n",
+    "#exp_name = '2020_11_26_wall'; \n",
+    "exp_name = '2020_12_9_rotating'; \n",
     "\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
@@ -914,7 +890,8 @@
     "    print('read', fname)\n",
     "except:\n",
     "    print('could not read', fname)\n",
-    "    print('run wall_analysis.py')"
+    "    print('run wall_analysis.py')\n",
+    "df_total.tail()"
    ]
   },
   {
@@ -926,24 +903,20 @@
     "from wall_detector import WallDetector\n",
     "import progressbar\n",
     "\n",
-    "df_total.tail()\n",
-    "\n",
-    "verbose = False\n",
-    "#mic_type = 'measurement'; n_mics=1; n_spurious=10\n",
-    "mic_type = 'audio_deck'; n_mics=4; n_spurious=1\n",
-    "\n",
-    "kwargs = {\n",
-    "    'slope': (5000 - 1000) / 32,\n",
-    "    'offset': 500,\n",
-    "    'delta': 6\n",
-    "}\n",
-    "df_here = df_total[df_total.mic_type==mic_type]\n",
-    "\n",
-    "wall_detector = WallDetector(kwargs, n_mics=n_mics)\n",
+    "#mic_type = 'measurement'; \n",
+    "mic_type = 'audio_deck'; \n",
+    "motors = 0\n",
+    "snr = 0\n",
+    "wall_detector = WallDetector(exp_name=exp_name, mic_type=mic_type)\n",
     "\n",
     "try: \n",
     "    wall_detector.fill_from_backup(exp_name, mic_type)\n",
     "except:\n",
+    "    verbose = False\n",
+    "    df_here = df_total[(df_total.mic_type==mic_type) & \n",
+    "                       (df_total.motors==motors)&\n",
+    "                       (df_total.snr==snr)]\n",
+    "    \n",
     "    fig, ax = plt.subplots()\n",
     "    with progressbar.ProgressBar(max_value = len(df_total)) as p:\n",
     "        for i, row in df_here.iterrows():\n",
@@ -953,10 +926,11 @@
     "                                                      times=row.seconds, verbose=verbose)\n",
     "            if ax is not None:\n",
     "                spec_avg = np.mean(spec, axis=1) \n",
-    "                ax.pcolorfast(np.arange(spec.shape[2]), freqs, np.log10(spec_avg))\n",
+    "                ax.pcolorfast(row.seconds, freqs, np.log10(spec_avg[:-1, :-1]))\n",
     "                ax = None\n",
+    "\n",
     "            p.update(i)\n",
-    "    wall_detector.backup(exp_name, mic_type)"
+    "    #wall_detector.backup(exp_name, mic_type)"
    ]
   },
   {
@@ -975,7 +949,8 @@
     "fig.set_size_inches(10, 10)\n",
     "ax.pcolorfast(row.seconds, freqs, np.log10(spec_all[:-1, mic_idx, :-1]))\n",
     "\n",
-    "spec_masked, freq_masked = apply_linear_mask(spec_all, freqs, **kwargs, ax=ax, times=row.seconds)"
+    "kwargs_linear = {k:val for k, val in kwargs.items() if k in ['offset', 'slope', 'delta']}\n",
+    "spec_masked, freq_masked = apply_linear_mask(spec_all, freqs, **kwargs_linear, ax=ax, times=row.seconds)"
    ]
   },
   {
@@ -984,8 +959,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_spurious_freqs(n_spurious)\n",
-    "assert wall_detector.remove_spurious_freqs(n_spurious) == 0\n",
+    "wall_detector.remove_spurious_freqs()\n",
+    "assert wall_detector.remove_spurious_freqs() == 0\n",
     "\n",
     "mic_idx = 0\n",
     "f_slices, freqs = wall_detector.get_frequency_slice(distance=1, max_freq=4500, min_freq=2000)\n",
@@ -1000,6 +975,7 @@
    "outputs": [],
    "source": [
     "d_slices, distances = wall_detector.get_distance_slice(frequency=1125)\n",
+    "print(distances)\n",
     "plt.figure()\n",
     "plt.plot(distances, d_slices[mic_idx])"
    ]
