Great cleanup of calibration

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -196,7 +196,7 @@
     "    spec_masked = np.mean(spec_masked_all, axis=1)\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    ax.pcolorfast(row.seconds, freqs, np.log10(spec_masked[:-1, :-1]))\n",
+    "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
     "\n",
     "    plt.figure()\n",
     "    for i in range(psd.shape[0]):\n",
@@ -257,11 +257,6 @@
     "    d_idx = 0; \n",
     "    with progressbar.ProgressBar(max_value=len(df_mic)) as p:\n",
     "        for distance, df_this in df_mic.groupby('distance'):\n",
-    "\n",
-    "            fig, axs = plt.subplots(1, wall_detector.n_mics, squeeze=False)\n",
-    "            fig.set_size_inches(10, 5)\n",
-    "            fig.suptitle(f'distance={distance}cm, {filter_dict}')\n",
-    "\n",
     "            if len(df_this) != 1: \n",
     "                print(f\"{len(df_this)} findings for {distance, filter_dict}\")\n",
     "                continue\n",
@@ -269,27 +264,26 @@
     "            row = df_this.iloc[0]\n",
     "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
     "\n",
-    "            wall_detector.remove_spurious_freqs(verbose=False)\n",
-    "            psd, freqs_psd = wall_detector.get_frequency_slice(distance=row.distance)\n",
-    "            std_psd, __ = wall_detector.get_frequency_slice(distance=row.distance, method=normalized_std)\n",
+    "        wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "        \n",
+    "        df_amp, distances, frequencies = wall_detector.get_df_matrix()\n",
+    "        df_std, *_ = wall_detector.get_df_matrix(method=normalized_std)\n",
+    "        \n",
+    "        plt.figure()\n",
+    "        for i in range(wall_detector.n_mics):\n",
+    "            fig, ax = plt.subplots()\n",
+    "            ax.pcolorfast(distances, frequencies, df_amp[i, :-1, :-1])\n",
     "\n",
-    "            for i in range(wall_detector.n_mics):\n",
-    "                mic_idx = wall_detector.mic_indices[i]\n",
-    "                axs[0, i].errorbar(freqs_psd, psd[i], std_psd[i], \n",
-    "                                  label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
-    "                axs[0, i].set_yscale('log')\n",
-    "                axs[0, i].set_title(f'm{mic_idx}')\n",
-    "                \n",
-    "            p.update(d_idx); d_idx += 1\n",
+    "        # frequency slices\n",
+    "        #for i in range(wall_detector.n_mics):\n",
+    "        #    mic_idx = wall_detector.mic_indices[i]\n",
+    "        #    axs[0, i].errorbar(freqs_psd, psd[i], std_psd[i], \n",
+    "        #                       label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
+    "        #    axs[0, i].set_yscale('log')\n",
+    "        #    axs[0, i].set_title(f'm{mic_idx}')\n",
+    "        p.update(d_idx); d_idx += 1\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -309,11 +303,10 @@
     "CHOSEN_MICS = [0, 1, 2, 3] #[0, 1, 2, 3] #[3]\n",
     "\n",
     "calib_df = pd.read_pickle('results/calibration_results.pkl')\n",
+    "print(calib_df.source.unique())\n",
     "chosen_dict = {\n",
-    "   'source': 'sweep',\n",
-    "   #'method': 'median-reject',\n",
-    "   'method': 'median',\n",
-    "   'type': 'psd_df',\n",
+    "   'source': 'sweep_buzzer',\n",
+    "   'method': np.median,\n",
     "}\n",
     "calib_df = filter_by_dicts(calib_df, [chosen_dict])\n",
     "assert len(calib_df) == 1\n",
@@ -326,13 +319,13 @@
     "    axs[0, i].semilogy(row.frequencies, row.psd[mic_idx], color=f'C{mic_idx}')\n",
     "    axs[0, i].set_xlabel('frequency [Hz]')\n",
     "    axs[0, i].set_title(f'mic{mic_idx}')\n",
-    "axs[0, 0].set_ylabel('PSD')\n",
-    "axs[0, i].set_ylim(1e-2, 3e2)\n",
+    "axs[0, 0].set_ylabel('amplitude')\n",
+    "axs[0, i].set_ylim(1e-3, 20)\n",
     "\n",
     "calib_psd = row.psd\n",
     "calib_f = row.frequencies\n",
     "\n",
-    "uniform_f = np.linspace(1000, 6000, 50)\n",
+    "uniform_f = np.linspace(1000, 5000, 50)\n",
     "calib = interp1d(x=calib_f, y=calib_psd, kind='linear', fill_value='extrapolate')\n",
     "uniform_psd = calib(uniform_f)\n",
     "for i, mic_idx in enumerate(CHOSEN_MICS):\n",
@@ -340,6 +333,13 @@
     "    axs[0, i].grid('both')\n",
     "    \n",
     "fig.savefig('plots/calibration.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO: fix below"
    ]
   },
   {
@@ -920,10 +920,7 @@
     "    fig, ax = plt.subplots()\n",
     "    with progressbar.ProgressBar(max_value = len(df_total)) as p:\n",
     "        for i, row in df_here.iterrows():\n",
-    "            spec, freqs = wall_detector.fill_from_raw(row.frequencies_matrix, \n",
-    "                                                      row.stft, \n",
-    "                                                      distance=row.distance, \n",
-    "                                                      times=row.seconds, verbose=verbose)\n",
+    "            spec, freqs = wall_detector.fill_from_row(row, verbose=verbose)\n",
     "            if ax is not None:\n",
     "                spec_avg = np.mean(spec, axis=1) \n",
     "                ax.pcolorfast(row.seconds, freqs, np.log10(spec_avg[:-1, :-1]))\n",
@@ -939,28 +936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from frequency_analysis import get_spectrogram_raw, apply_linear_mask\n",
-    "mic_idx = 0\n",
-    "row = df_here.iloc[0]\n",
-    "\n",
-    "spec_all, freqs= get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 10)\n",
-    "ax.pcolorfast(row.seconds, freqs, np.log10(spec_all[:-1, mic_idx, :-1]))\n",
-    "\n",
-    "kwargs_linear = {k:val for k, val in kwargs.items() if k in ['offset', 'slope', 'delta']}\n",
-    "spec_masked, freq_masked = apply_linear_mask(spec_all, freqs, **kwargs_linear, ax=ax, times=row.seconds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wall_detector.remove_spurious_freqs()\n",
-    "assert wall_detector.remove_spurious_freqs() == 0\n",
+    "wall_detector.remove_spurious_freqs(n_spurious=1)\n",
     "\n",
     "mic_idx = 0\n",
     "f_slices, freqs = wall_detector.get_frequency_slice(distance=1, max_freq=4500, min_freq=2000)\n",
@@ -986,7 +962,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances, frequencies, df_matrix_mics = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500)"
+    "df_matrix_mics, distances, frequencies = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500)"
    ]
   },
   {
@@ -996,7 +972,7 @@
    "outputs": [],
    "source": [
     "method = lambda x: np.nanstd(x) / np.mean(x)\n",
-    "distances, frequencies, std_matrix_mics = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500, method=method)"
+    "std_matrix_mics, distances, frequencies = wall_detector.get_df_matrix(min_freq=1000, max_freq=4500, method=method)"
    ]
   },
   {
@@ -1043,9 +1019,6 @@
     "#mat_norm = normalize_rows(mat, method='sum_to_one')\n",
     "#df_matrix_norm = np.transpose(mat_norm, (2, 0, 1))\n",
     "\n",
-    "from sklearn.impute import KNNImputer\n",
-    "imputer = KNNImputer(n_neighbors=5, weights=\"distance\", missing_values=0)\n",
-    "\n",
     "for i in [0]: #range(df_matrix_mics.shape[0]):\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
@@ -1077,12 +1050,6 @@
     "    \n",
     "    fig, ax = plt.subplots()\n",
     "    ax.pcolorfast(distances, frequencies, np.log10(df_matrix_mics[i, :-1, :-1]))\n",
-    "    ax.set_title(f'mic{i}')\n",
-    "\n",
-    "    df_filled = imputer.fit_transform(df_matrix_mics[i, :-1, :-1])\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(distances, frequencies, np.log10(df_filled))\n",
     "    ax.set_title(f'mic{i}')"
    ]
   },
