Add normalization and calibration to pipeline

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "from wall_analysis import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dicts\n",
     "from wall_detector import WallDetector\n",
     "from frequency_analysis import plot_spectrogram\n",
     "import progressbar\n",
