--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -203,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "from wall_analysis import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dicts\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
     "min_freq = 100\n",
